--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,8 @@ code {
   height: calc(100vh - 200px);
   overflow-y: auto;
 }
+
+.main-tab-panel {
+  height: calc(100vh - 60px);
+  overflow-y: auto;
+}
