--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,11 @@ code {
 .material-icons.size-36 { width: 36px; font-size: 36px; }
 .material-icons.size-48 { width: 48px; font-size: 48px; }
 
+.icon-button {
+  width: 50px;
+  height: 40px;
+}
+
 /* misc */
 
 .bar__wrapper {
@@ -41,4 +46,5 @@ code {
 .main-tab-panel {
   height: calc(100vh - 60px);
   overflow-y: auto;
+  overflow-x: hidden;
 }
