same style for zero uis, prefs name always visible

--- a/src/index.css
+++ b/src/index.css
@@ -22,8 +22,12 @@ code {
   height: 40px;
 }
 
-.pointer {
+.c-pointer {
   cursor: pointer !important;
+}
+
+.c-default {
+  cursor: default !important;
 }
 
 /* misc */
